# mqo-decision-log

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: cli.rs  lib.rs  log_store.rs  main.rs  query.rs  record.rs  serve.rs  summary.rs  verify.rs
tests/: acceptance.rs
tests/fixtures/: answer.json  sample.jsonl  tampered.jsonl
