[package]
name = "mqo-decision-log"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Durable, auditable append-only log of every mqo-agent decision"
license = "MIT"
authors = ["Joe Yen <jyen.tech@gmail.com>"]

[lib]
name = "mqo_decision_log"
path = "src/lib.rs"

[[bin]]
name = "mqo-decision-log"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
